[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/level_overlay.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/dungeon_generator.gd" type="Script" id=2]
[ext_resource path="res://world/random_level.gd" type="Script" id=3]
[ext_resource path="res://world/tileset_template.tres" type="TileSet" id=5]

[node name="RandomLevel" type="Node"]
script = ExtResource( 3 )

[node name="LevelOverlay" parent="." instance=ExtResource( 1 )]

[node name="DungeonGenerator" type="Node2D" parent="."]
script = ExtResource( 2 )
room_count = 30
max_separation_iterations = 200
key_room_percentage = 0.2
tile_map = NodePath("../TileMap")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 128, 128 )
cell_custom_transform = Transform2D( 128, 0, 0, 128, 0, 0 )
collision_layer = 2
collision_mask = 513
format = 1
tile_data = PoolIntArray( -524286, 0, 8, -524285, 0, 10, -524284, 0, 10, -524283, 0, 10, -524282, 0, 10, -524281, 0, 10, -524280, 0, 10, -524279, 0, 11, -458750, 0, 65544, -458749, 0, 131078, -458748, 0, 196617, -458747, 0, 196617, -458746, 0, 196617, -458745, 0, 196617, -458744, 0, 131077, -458743, 0, 131083, -393214, 0, 65544, -393213, 0, 131083, -393208, 0, 65544, -393207, 0, 131083, -327678, 0, 65544, -327677, 0, 65542, -327676, 0, 10, -327675, 0, 10, -327674, 0, 10, -327673, 0, 10, -327672, 0, 65541, -327671, 0, 131083, -196622, 0, 8, -196621, 0, 10, -196620, 0, 10, -196619, 0, 10, -196618, 0, 10, -196617, 0, 10, -196616, 0, 10, -196615, 0, 11, -262142, 0, 65544, -262141, 0, 131078, -262140, 0, 196617, -262139, 0, 131077, -262138, 0, 131081, -262137, 0, 131081, -262136, 0, 131081, -262135, 0, 131083, -131086, 0, 65544, -131085, 0, 131078, -131084, 0, 196617, -131083, 0, 131077, -131082, 0, 131078, -131081, 0, 196617, -131080, 0, 131077, -131079, 0, 131083, -196606, 0, 65544, -196605, 0, 131083, -196603, 0, 65544, -196602, 0, 131081, -196601, 0, 131081, -196600, 0, 131081, -196599, 0, 131083, -65550, 0, 65544, -65549, 0, 131083, -65547, 0, 65544, -65546, 0, 131083, -65544, 0, 65544, -65543, 0, 131083, -131070, 0, 65544, -131069, 0, 65542, -131068, 0, 10, -131067, 0, 65541, -131066, 0, 131081, -131065, 0, 131081, -131064, 0, 131081, -131063, 0, 131083, -14, 0, 65544, -13, 0, 131083, -11, 0, 65544, -10, 0, 65542, -9, 0, 10, -8, 0, 65541, -7, 0, 65542, -6, 0, 10, -5, 0, 10, -4, 0, 10, -3, 0, 10, -2, 0, 10, -1, 0, 10, -65536, 0, 10, -65535, 0, 10, -65534, 0, 65541, -65533, 0, 131081, -65532, 0, 131081, -65531, 0, 131081, -65530, 0, 131081, -65529, 0, 131081, -65528, 0, 131081, -65527, 0, 131083, -65520, 0, 8, -65519, 0, 10, -65518, 0, 10, -65517, 0, 10, -65516, 0, 10, -65515, 0, 10, -65514, 0, 10, -65513, 0, 11, 65522, 0, 65544, 65523, 0, 131083, 65525, 0, 65544, 65526, 0, 131081, 65527, 0, 131081, 65528, 0, 131081, 65529, 0, 131081, 65530, 0, 131081, 65531, 0, 131081, 65532, 0, 131081, 65533, 0, 131081, 65534, 0, 131081, 65535, 0, 131081, 0, 0, 131081, 1, 0, 131081, 2, 0, 131081, 3, 0, 131081, 4, 0, 131081, 5, 0, 131081, 6, 0, 131078, 7, 0, 196617, 8, 0, 131077, 9, 0, 65542, 10, 0, 11, 12, 0, 1, 13, 0, 196610, 14, 0, 5, 15, 0, 10, 16, 0, 65541, 17, 0, 131078, 18, 0, 196617, 19, 0, 196617, 20, 0, 196617, 21, 0, 196617, 22, 0, 196617, 23, 0, 196619, 131058, 0, 65544, 131059, 0, 131083, 131061, 0, 65544, 131062, 0, 131081, 131063, 0, 131081, 131064, 0, 131081, 131065, 0, 131081, 131066, 0, 131081, 131067, 0, 131081, 131068, 0, 131081, 131069, 0, 131081, 131070, 0, 131081, 131071, 0, 131081, 65536, 0, 131081, 65537, 0, 131081, 65538, 0, 131081, 65539, 0, 131081, 65540, 0, 131081, 65541, 0, 131081, 65542, 0, 131083, 65544, 0, 65544, 65545, 0, 131081, 65546, 0, 131083, 65548, 0, 65536, 65550, 0, 65544, 65551, 0, 131081, 65552, 0, 131081, 65553, 0, 131083, 196594, 0, 65544, 196595, 0, 65542, 196596, 0, 10, 196597, 0, 65541, 196598, 0, 131081, 196599, 0, 131081, 196600, 0, 131081, 196601, 0, 131081, 196602, 0, 131081, 196603, 0, 131081, 196604, 0, 131081, 196605, 0, 131081, 196606, 0, 131081, 196607, 0, 131081, 131072, 0, 131081, 131073, 0, 131081, 131074, 0, 131081, 131075, 0, 131081, 131076, 0, 131081, 131077, 0, 131081, 131078, 0, 65542, 131079, 0, 10, 131080, 0, 65541, 131081, 0, 131081, 131082, 0, 65542, 131083, 0, 10, 131084, 0, 9, 131085, 0, 10, 131086, 0, 65541, 131087, 0, 131081, 131088, 0, 131081, 131089, 0, 65542, 131090, 0, 10, 131091, 0, 10, 131092, 0, 10, 131093, 0, 10, 131094, 0, 10, 131095, 0, 11, 262130, 0, 196616, 262131, 0, 196617, 262132, 0, 196617, 262133, 0, 196617, 262134, 0, 131077, 262135, 0, 131081, 262136, 0, 131081, 262137, 0, 131081, 262138, 0, 131081, 262139, 0, 131081, 262140, 0, 131081, 262141, 0, 131081, 262142, 0, 131081, 262143, 0, 131081, 196608, 0, 131081, 196609, 0, 131081, 196610, 0, 131081, 196611, 0, 131081, 196612, 0, 131081, 196613, 0, 131081, 196614, 0, 131081, 196615, 0, 131081, 196616, 0, 131081, 196617, 0, 131081, 196618, 0, 131081, 196619, 0, 131081, 196620, 0, 131081, 196621, 0, 131081, 196622, 0, 131081, 196623, 0, 131081, 196624, 0, 131081, 196625, 0, 131081, 196626, 0, 131081, 196627, 0, 131081, 196628, 0, 131078, 196629, 0, 196617, 196630, 0, 131077, 196631, 0, 131083, 327670, 0, 196616, 327671, 0, 196617, 327672, 0, 196617, 327673, 0, 196617, 327674, 0, 196617, 327675, 0, 196617, 327676, 0, 196617, 327677, 0, 196617, 327678, 0, 196617, 327679, 0, 196617, 262144, 0, 196617, 262145, 0, 196617, 262146, 0, 196617, 262147, 0, 196617, 262148, 0, 196617, 262149, 0, 196617, 262150, 0, 196617, 262151, 0, 131077, 262152, 0, 131081, 262153, 0, 131078, 262154, 0, 196617, 262155, 0, 131077, 262156, 0, 131081, 262157, 0, 131078, 262158, 0, 196617, 262159, 0, 196617, 262160, 0, 131077, 262161, 0, 131081, 262162, 0, 131081, 262163, 0, 131081, 262164, 0, 131083, 262166, 0, 65544, 262167, 0, 131083, 327687, 0, 65544, 327688, 0, 131081, 327689, 0, 131083, 327691, 0, 65544, 327692, 0, 131081, 327693, 0, 131083, 327696, 0, 65544, 327697, 0, 131081, 327698, 0, 131081, 327699, 0, 131081, 327700, 0, 65542, 327701, 0, 10, 327702, 0, 65541, 327703, 0, 131083, 393223, 0, 196616, 393224, 0, 196617, 393225, 0, 196614, 393226, 0, 196610, 393227, 0, 131080, 393228, 0, 131081, 393229, 0, 131083, 393232, 0, 196616, 393233, 0, 196617, 393234, 0, 196617, 393235, 0, 196617, 393236, 0, 196617, 393237, 0, 196617, 393238, 0, 196617, 393239, 0, 196619, 458763, 0, 65544, 458764, 0, 131081, 458765, 0, 131083, 524299, 0, 65544, 524300, 0, 131081, 524301, 0, 131083, 589832, 0, 8, 589833, 0, 10, 589834, 0, 10, 589835, 0, 65541, 589836, 0, 131081, 589837, 0, 131083, 655368, 0, 65544, 655369, 0, 131081, 655370, 0, 131081, 655371, 0, 131081, 655372, 0, 131081, 655373, 0, 131083, 655375, 0, 0, 720904, 0, 65544, 720905, 0, 131081, 720906, 0, 131081, 720907, 0, 131081, 720908, 0, 131081, 720909, 0, 131083, 720911, 0, 65536, 786440, 0, 65544, 786441, 0, 131078, 786442, 0, 196617, 786443, 0, 131077, 786444, 0, 131081, 786445, 0, 65542, 786446, 0, 10, 786447, 0, 65543, 917492, 0, 8, 917493, 0, 10, 917494, 0, 10, 917495, 0, 10, 917496, 0, 10, 917497, 0, 10, 917498, 0, 10, 917499, 0, 11, 851976, 0, 65544, 851977, 0, 131083, 851979, 0, 65544, 851980, 0, 131081, 851981, 0, 131081, 851982, 0, 131081, 851983, 0, 131083, 983028, 0, 65544, 983029, 0, 131081, 983030, 0, 131081, 983031, 0, 131078, 983032, 0, 196617, 983033, 0, 196617, 983034, 0, 131077, 983035, 0, 131083, 917512, 0, 65544, 917513, 0, 131083, 917515, 0, 65544, 917516, 0, 131081, 917517, 0, 131081, 917518, 0, 131081, 917519, 0, 131083, 1048564, 0, 65544, 1048565, 0, 131081, 1048566, 0, 131081, 1048567, 0, 131083, 1048570, 0, 65544, 1048571, 0, 131083, 983043, 0, 8, 983044, 0, 10, 983045, 0, 10, 983046, 0, 11, 983048, 0, 65544, 983049, 0, 65542, 983050, 0, 10, 983051, 0, 65541, 983052, 0, 131081, 983053, 0, 131081, 983054, 0, 131081, 983055, 0, 131083, 1114100, 0, 65544, 1114101, 0, 131078, 1114102, 0, 196617, 1114103, 0, 131082, 1114104, 0, 10, 1114105, 0, 10, 1114106, 0, 65541, 1114107, 0, 65542, 1114108, 0, 10, 1114109, 0, 10, 1114110, 0, 10, 1114111, 0, 10, 1048576, 0, 10, 1048577, 0, 10, 1048578, 0, 10, 1048579, 0, 65541, 1048580, 0, 131081, 1048581, 0, 131081, 1048582, 0, 65542, 1048583, 0, 10, 1048584, 0, 65541, 1048585, 0, 131081, 1048586, 0, 131081, 1048587, 0, 131081, 1048588, 0, 131081, 1048589, 0, 131078, 1048590, 0, 196617, 1048591, 0, 196619, 1179636, 0, 65544, 1179637, 0, 131083, 1179639, 0, 196616, 1179640, 0, 131077, 1179641, 0, 131081, 1179642, 0, 131081, 1179643, 0, 131081, 1179644, 0, 131081, 1179645, 0, 131081, 1179646, 0, 131081, 1179647, 0, 131081, 1114112, 0, 131081, 1114113, 0, 131081, 1114114, 0, 131081, 1114115, 0, 131081, 1114116, 0, 131081, 1114117, 0, 131081, 1114118, 0, 131081, 1114119, 0, 131081, 1114120, 0, 131081, 1114121, 0, 131081, 1114122, 0, 131081, 1114123, 0, 131081, 1114124, 0, 131078, 1114125, 0, 196619, 1245172, 0, 65544, 1245173, 0, 131083, 1245176, 0, 65544, 1245177, 0, 131081, 1245178, 0, 131081, 1245179, 0, 131078, 1245180, 0, 196617, 1245181, 0, 196617, 1245182, 0, 196617, 1245183, 0, 196617, 1179648, 0, 196617, 1179649, 0, 196617, 1179650, 0, 131077, 1179651, 0, 131081, 1179652, 0, 131078, 1179653, 0, 196617, 1179654, 0, 196617, 1179655, 0, 196617, 1179656, 0, 196617, 1179657, 0, 196617, 1179658, 0, 196617, 1179659, 0, 196617, 1179660, 0, 196619, 1310708, 0, 65544, 1310709, 0, 65542, 1310710, 0, 10, 1310711, 0, 10, 1310712, 0, 65541, 1310713, 0, 131081, 1310714, 0, 131081, 1310715, 0, 131083, 1245186, 0, 65544, 1245187, 0, 131081, 1245188, 0, 131083, 1376244, 0, 196616, 1376245, 0, 196617, 1376246, 0, 196617, 1376247, 0, 196617, 1376248, 0, 196617, 1376249, 0, 196617, 1376250, 0, 196617, 1376251, 0, 196619, 1310722, 0, 65544, 1310723, 0, 131081, 1310724, 0, 131083, 1376258, 0, 65544, 1376259, 0, 131081, 1376260, 0, 65542, 1376261, 0, 11, 1441794, 0, 65544, 1441795, 0, 131081, 1441796, 0, 131081, 1441797, 0, 131083, 1507330, 0, 65544, 1507331, 0, 131081, 1507332, 0, 131078, 1507333, 0, 196619, 1638399, 0, 8, 1572864, 0, 11, 1572866, 0, 65544, 1572867, 0, 131081, 1572868, 0, 131083, 1703935, 0, 65544, 1638400, 0, 65542, 1638401, 0, 10, 1638402, 0, 65541, 1638403, 0, 131081, 1638404, 0, 131083, 1638406, 0, 0, 1769471, 0, 65544, 1703936, 0, 131081, 1703937, 0, 131081, 1703938, 0, 131081, 1703939, 0, 131081, 1703940, 0, 131083, 1703942, 0, 65536, 1835007, 0, 65544, 1769472, 0, 131078, 1769473, 0, 196617, 1769474, 0, 131077, 1769475, 0, 131081, 1769476, 0, 65542, 1769477, 0, 10, 1769478, 0, 65543, 1900543, 0, 65544, 1835008, 0, 131083, 1835010, 0, 65544, 1835011, 0, 131078, 1835012, 0, 196617, 1835013, 0, 131077, 1835014, 0, 131083, 1966079, 0, 65544, 1900544, 0, 131083, 1900546, 0, 65544, 1900547, 0, 131083, 1900549, 0, 65544, 1900550, 0, 131083, 2031615, 0, 65544, 1966080, 0, 65542, 1966081, 0, 10, 1966082, 0, 65541, 1966083, 0, 65542, 1966084, 0, 10, 1966085, 0, 65541, 1966086, 0, 131083, 2097151, 0, 196616, 2031616, 0, 196617, 2031617, 0, 196617, 2031618, 0, 196617, 2031619, 0, 196617, 2031620, 0, 196617, 2031621, 0, 196617, 2031622, 0, 196619 )

[node name="Objects" type="Node" parent="."]

[node name="PlayerSpawn" type="Node2D" parent="Objects"]
position = Vector2( -1290, 272 )

[node name="StairsSpawn" type="Node2D" parent="Objects"]

[node name="Entities" type="YSort" parent="."]
